kyverno/C0010-safe-to-evict/policy-p0010.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-pod-p0001
  annotations:
    policies.kyverno.io/title: Add safe to evict
    policies.kyverno.io/category: Workload Management
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      The Kubernetes cluster autoscaler does not evict pods that
      use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation
      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to the pods.
    a8r.io/description: Kyverno policies for Portefaix
    a8r.io/owner: portefaix
    a8r.io/bugs: https://github.com/portefaix/portefaix/issues
    a8r.io/documentation: https://github.com/portefaix/portefaix
    a8r.io/repository: https://github.com/portefaix/portefaix
    a8r.io/support: https://github.com/portefaix/portefaix/issues
spec:
  rules:
  - name: annotate-empty-dir
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:
          volumes:
          - <(emptyDir): {}
  - name: annotate-host-path
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:
          volumes:
          - hostPath:
              <(path): "*"
